--- a/index.html
+++ b/index.html
@@ -801,16 +801,35 @@
         /* Small Phones */
         @media (max-width: 480px) {
             .header {
-                padding: 20px 24px;
+                padding: 8px 12px;
+                padding-left: 16px;
+                width: calc(100% - 24px);
+                margin-left: 12px;
+                margin-right: 12px;
             }
 
             .logo {
-                font-size: 18px;
+                font-size: 16px;
+            }
+
+            .logo img {
+                width: 24px;
+                height: 24px;
+            }
+
+            .nav-actions {
+                gap: 6px;
+            }
+
+            .nav-link {
+                font-size: 14px;
+                padding: 6px 12px;
             }
 
             .nav-button {
-                font-size: 14px;
-                padding: 6px 12px;
+                font-size: 13px;
+                padding: 8px 16px;
+                white-space: nowrap;
             }
 
             .hero-image {
@@ -825,8 +844,8 @@
             }
 
             .problem, .solution, .users, .cta, .faq, .features {
-                padding: 50px 24px;
-                max-width: 80%;
+                padding: 50px 20px;
+                max-width: 100%;
             }
 
             .faq-title {
@@ -858,11 +877,22 @@
                 margin-bottom: 32px;
             }
 
+            .solution {
+                padding: 50px 16px;
+            }
+
             .video-container {
-                width: 80%;
-                max-width: 350px;
-                height: 350px;
+                width: calc(100% - 32px);
+                max-width: 300px;
+                aspect-ratio: 1 / 1;
+                height: auto;
                 margin: 24px auto;
+            }
+
+            .solution-video {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
             }
 
             .features {
@@ -938,7 +968,7 @@
             womp
         </div>
         <div class="nav-actions">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="nav-link">Watch Trailer</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="nav-link">Trailer</a>
             <a href="https://form.typeform.com/to/Sj3IxLNZ?typeform-source=www.womp.systems" target="_blank" style="text-decoration: none;">
                 <button class="nav-button">Join Waitlist</button>
             </a>
