--- a/terms-privacy.html
+++ b/terms-privacy.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Privacy - womp</title>
+    <link rel="icon" type="image/x-icon" href="images/womplogo.png">
+    <title>Terms & Privacy</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         * {
