--- a/terms-privacy.html
+++ b/terms-privacy.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="images/womplogo.png">
     <title>Terms & Privacy</title>
+    
+    <!-- Open Graph / Facebook / Twitter -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tongfeiz.github.io/womp_github/terms-privacy.html">
+    <meta property="og:title" content="Terms & Privacy - womp">
+    <meta property="og:description" content="Terms and Privacy Policy for womp">
+    <meta property="og:image" content="https://tongfeiz.github.io/womp_github/images/womprepocard.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://tongfeiz.github.io/womp_github/terms-privacy.html">
+    <meta name="twitter:title" content="Terms & Privacy - womp">
+    <meta name="twitter:description" content="Terms and Privacy Policy for womp">
+    <meta name="twitter:image" content="https://tongfeiz.github.io/womp_github/images/womprepocard.png">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         * {
