--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             padding: 16px 28px;
             border-radius: 9999px;
             transition: opacity 0.3s ease;
+            white-space: nowrap;
         }
 
         .nav-button:hover {
